--- a/public/confirmation.html
+++ b/public/confirmation.html
@@ -24,7 +24,9 @@
     <div class="payment-container">
       <h1>{{message}}</h1>
 
-      <a style="margin-top: 10px" href="http://localhost:3000">Go Back</a>
+      <a style="margin-top: 10px" href="https://purrfect-care-client.vercel.app"
+        >Go Back</a
+      >
     </div>
   </body>
 </html>
